--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -7,7 +7,7 @@ import Card from '../../components/card.astro';
 const title = "広島県小児科医会について";
 const description = "広島県小児科医会の小児科医会についてのページです。会長挨拶や、組織・役員について説明をします。";
 const url = "https://blog.hiroshima-ped.com/about";
-const keyword = "広島県小児科医会, 広島県, 広島, 小児科, 小児科医, 小児科医会, 小児科医会について";
+const keywords = "広島県小児科医会, 広島県, 広島, 小児科, 小児科医, 小児科医会, 小児科医会について";
 
 
 //画像
