--- a/src/pages/about/message.astro
+++ b/src/pages/about/message.astro
@@ -6,7 +6,7 @@ import Layout from '../../layouts/Layout.astro';
 const title = "会長挨拶";
 const description = "広島県小児科医会の会長挨拶のページです。";
 const url = "https://blog.hiroshima-ped.com/about/message";
-const keyword = "広島県小児科医会, 広島, 広島県, 小児科, 小児科医会, 小児科医, 会長挨拶";
+const keywords = "広島県小児科医会, 広島, 広島県, 小児科, 小児科医会, 小児科医, 会長挨拶";
 
 
 //画像
