--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -6,7 +6,7 @@ import Layout from '../../layouts/Layout.astro';
 const title = "組織・役員";
 const description = "広島県小児科医会の組織・役員のページです。";
 const url = "https://blog.hiroshima-ped.com/about/team";
-const keyword = "広島県小児科医, 広島, 広島県, 小児科医, 小児科医会, 小児科, 組織・役員";
+const keywords = "広島県小児科医, 広島, 広島県, 小児科医, 小児科医会, 小児科, 組織・役員";
 
 
 //画像
