--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Card from '../components/card.astro';
 const title = "";
 const description = "広島県小児科医会のホームページです。";
 const url = "https://blog.hiroshima-ped.com";
-const keyword = "広島県小児科医会, 広島県, 広島, 小児科, 小児科医会, ホームページ, 会員登録, 入局";
+const keywords = "広島県小児科医会, 広島県, 広島, 小児科, 小児科医会, ホームページ, 会員登録, 入局";
 
 
 //画像
