--- a/src/pages/join/fee.astro
+++ b/src/pages/join/fee.astro
@@ -7,7 +7,7 @@ import Card from '../../components/card.astro';
 const title = "会費";
 const description = "広島県小児科医会の会費のページです。会員の年会費はそれぞれ、A会員は12,000円、B・C会員は5,000円です。";
 const url = "https://blog.hiroshima-ped.com/join/fee";
-const keyword = "広島県小児科医会, 広島県, 広島, 小児科医, 小児科, 会費";
+const keywords = "広島県小児科医会, 広島県, 広島, 小児科医, 小児科, 会費";
 
 
 //画像
