--- a/src/pages/join/index.astro
+++ b/src/pages/join/index.astro
@@ -7,7 +7,7 @@ import Card from '../../components/card.astro';
 const title = "入会案内";
 const description = "広島県小児科医会の入会案内のページです。会則や組織・役員について知ることができます。";
 const url = "https://blog.hiroshima-ped.com/join";
-const keyword = "広島県小児科医会, 広島県, 広島, 小児科医会, 小児科, 入会案内";
+const keywords = "広島県小児科医会, 広島県, 広島, 小児科医会, 小児科, 入会案内";
 
 
 //画像
