--- a/src/pages/join/rules.astro
+++ b/src/pages/join/rules.astro
@@ -6,7 +6,7 @@ import Layout from '../../layouts/Layout.astro';
 const title = "会則";
 const description = "広島県小児科医会の会則です。";
 const url = "https://blog.hiroshima-ped.com/join/rules";
-const keyword = "広島県小児科医会, 広島, 広島県, 小児科医会, 小児科, 会則";
+const keywords = "広島県小児科医会, 広島, 広島県, 小児科医会, 小児科, 会則";
 
 
 //画像
