--- a/src/pages/members/index.astro
+++ b/src/pages/members/index.astro
@@ -6,7 +6,7 @@ import Layout from "../../layouts/Layout.astro";
 const title = "会員ページ";
 const description = "広島県小児科医会の会員専用のページです。会報や会員の先生のホームページはこちらからご覧になれます。";
 const url = "https://blog.hiroshima-ped.com/members";
-const keyword = "広島県小児科医会, 広島県, 広島, 小児科医会, 小児科, 会員ページ";
+const keywords = "広島県小児科医会, 広島県, 広島, 小児科医会, 小児科, 会員ページ";
 
 // セッションチェック(Astro.cookiesを使用)
 const session = getSession(Astro.cookies);
