--- a/src/pages/members/login.astro
+++ b/src/pages/members/login.astro
@@ -11,7 +11,7 @@ if (session && session.loggedIn) {
 const title = "ログインページ";
 const description = "広島県小児科医会のログインページです。会員専用サイトへのログインはこちらから。";
 const url = "https://blog.hiroshima-ped.com/members/login";
-const keyword = "広島県小児科医会, 広島, 広島県, 小児科医会, ログイン";
+const keywords = "広島県小児科医会, 広島, 広島県, 小児科医会, ログイン";
 ---
 
 <Layout title={title} description={description} url={url}>
