--- a/src/pages/site.astro
+++ b/src/pages/site.astro
@@ -7,7 +7,7 @@ import Card from '../components/card.astro';
 const title = "サイトポリシー";
 const description = "広島県小児科医会のサイトポリシーです。";
 const url = "https://blog.hiroshima-ped.com/site";
-const keyword = "サイトポリシー";
+const keywords = "サイトポリシー";
 
 
 //画像
