--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
 
-@use "../sass/foundation";
-@use "../sass/layout/layout";
-@use "../sass/object";
+@use "../../sass/foundation";
+@use "../../sass/layout/layout";
+@use "../../sass/object";
