--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -7,7 +7,7 @@ import Card from '../components/card.astro';
 const title = "プライバシーポリシー";
 const description = "広島県小児科医会のプライバシーです。";
 const url = "https://blog.hiroshima-ped.com/privacy";
-const keyword = "プライバシーポリシー";
+const keywords = "プライバシーポリシー";
 
 
 //画像
