Fix: header-hide.js を is:inline に変更

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,5 +66,5 @@ import Footer from '../components/footer.astro';
 		<slot />
         <Footer />
 	</body>
-    <script src="../scripts/header-hide.js"></script>
+    <script src="/scripts/header-hide.js" is=:inline></script>
 </html>
